--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GD ALI</title>
+  <title>Mask Wala Guy</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css"
     integrity="sha512-SbiR/eusphKoMVVXysTKG/7VseWii+Y3FdHrt0EpKgpToZeemhqHeZeLWLhJutz/2ut2Vw1uQEj2MbRF+TVBUA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -62,7 +62,7 @@
     <section class="d-flex justify-content-center mt-5 pt-5 flex-column int">
       <h1 class="white ">Welcome To My World!</h1>
       <p class="white">Explore the world of Valorant and enhance your gaming experience.</p>
-      <a href="https://www.youtube.com/@GD_ALI_" target="_blank" class="btn btn-danger" style="width: 10rem;">Visit
+      <a href="https://www.youtube.com/@sohail6391" target="_blank" class="btn btn-danger" style="width: 10rem;">Visit
         Channel <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
     </section>
 
@@ -76,13 +76,13 @@
       <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-12 ">
         <h2 class="d-flex justify-content-center">About Us</h2>
-        <p>GD Ali is a passionate gamer and content creator known for his engaging and informative videos on Valorant.
-          With a dedicated focus on the game, GD Ali strives to provide valuable insights, tips, and strategies to help
+        <p>Mask Wala Guy is a passionate gamer and content creator known for his engaging and informative videos on Valorant.
+          With a dedicated focus on the game, Mask Wala Guy strives to provide valuable insights, tips, and strategies to help
           players improve their gameplay and stay updated with the latest happenings in the Valorant community.</p>
-        <p>On his YouTube channel, GD Ali shares in-depth guides, gameplay analysis, weapon reviews, patch notes
+        <p>On his YouTube channel, Mask Wala Guy shares in-depth guides, gameplay analysis, weapon reviews, patch notes
           discussions, and much more. His entertaining and educational content has attracted a growing community of
           Valorant enthusiasts who appreciate his expertise and enthusiasm for the game.</p>
-        <p>Join GD Ali on his journey as he dives into the world of Valorant, explores the intricacies of the game, and
+        <p>Join Mask Wala Guy on his journey as he dives into the world of Valorant, explores the intricacies of the game, and
           helps players unleash their full potential on the battlefield.</p>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 d-flex align-items-center justify-content-center">
@@ -125,10 +125,9 @@
     <div class="col-lg-3 col-md-3 col-sm-6">
       <h3>Follow Us</h3>
       <ul class="social-media-icons">
-        <li><a href="#"><i class="fab fa-facebook-f pe-1"></i>FaceBook </a></li>
-        <li><a href="#"><i class="fab fa-twitter pe-1"></i>Twitter</a></li>
-        <li><a href="#"><i class="fab fa-instagram pe-1"></i>Instagram</a></li>
-        <li><a href="#"><i class="fab fa-youtube pe-1"></i>YouTube</a></li>
+        <li><a target="_blank" href="https://www.facebook.com/abdullahwebmaster/"><i class="fab fa-facebook-f pe-1"></i>FaceBook </a></li>
+        <li><a target="_blank" href="https://www.instagram.com/abdullahwebmaster/"><i class="fab fa-instagram pe-1"></i>Instagram</a></li>
+        <li><a target="_blank" href="https://www.youtube.com/@sohail6391"><i class="fab fa-youtube pe-1"></i>YouTube</a></li>
       </ul>
     </div>
   </div>
@@ -136,7 +135,7 @@
 
 
   <div class="ms-5">
-    © Copyright 2023 <a href="https://www.instagram.com/abdullahjani100/">@abdullahjani100.</a> All Rights Reserved.
+    © Copyright 2023 <a target="_blank" href="https://www.instagram.com/abdullahwebmaster/">@abdullahwebmaster.</a> All Rights Reserved.
   </div>
 </footer>
 
