--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GD ALI Products</title>
+  <title>Mask Wala Guy Products</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css"
     integrity="sha512-SbiR/eusphKoMVVXysTKG/7VseWii+Y3FdHrt0EpKgpToZeemhqHeZeLWLhJutz/2ut2Vw1uQEj2MbRF+TVBUA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -67,27 +67,27 @@
     <div class="row mt-5">
       <div class="col-lg-6 col-md-6 col-sm-12 col-12 d-flex justify-content-center">
         <div class="card mb-5" style="width: 18rem; height: 26rem;">
-          <img src="img/img1.webp" class="card-img-top img-fluid enlargeable-image" alt="..." style="height: 190px;">
+          <img src="img/fan.avif" class="card-img-top img-fluid enlargeable-image" alt="..." style="height: 190px;">
           <div class="card-body text-center">
-            <h5 class="card-title"> Rechargeable with Remote Front Disc Pedestal Fan</h5>
-            <p class="card-text"> Price:<del>$30</del>
+            <h5 class="card-title"> Competitive Price Adjustable Height Cooling Fan Type 16 Inch Pedestal Stand Fan</h5>
+            <p class="card-text"> Price:<del>$10.51</del>
               <b style="color: red;">13.4% OFF</b><br>
-            <h3>$26</h3>
+            <h3>$9.10</h3>
             </p>
-            <a href="https://www.alibaba.com/product-detail/Rechargeable-With-Remote-Front-Disc-Pedestal_1600876984799.html?spm=a2700.galleryofferlist.normal_offer.d_image.6bc61f74h84kBz&s=p%5C" target="_blank" class="btn btn-primary">View Details </a>
+            <a href="https://www.alibaba.com/product-detail/Competitive-Price-Adjustable-Height-Cooling-Fan_1600148034336.html?spm=a2700.galleryofferlist.p_offer.d_image.76781bc91JmR1d&s=p" target="_blank" class="btn btn-primary">View Details </a>
           </div>
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 col-12 d-flex justify-content-center" id="product2">
         <div class="card mb-5" style="width: 18rem; height: 27rem;">
-          <img src="img/img6.webp" class="card-img-top img-fluid enlargeable-image" alt="..." style="height: 190px;">
+          <img src="img/ac.jpg" class="card-img-top img-fluid enlargeable-image" alt="..." style="height: 190px;">
           <div class="card-body text-center" style="overflow-y: hidden;">
-            <h5 class="card-title "> R290 smart Mobile Air Conditioners portable 7000 BTU</h5>
-            <p class="card-text ">Price:<del>$110</del>
+            <h5 class="card-title "> 12000 24000 BTU R410A Refrigerant 50Hz 60Hz Climatiseur AC Unit Inverter Mini Split Air Conditioner</h5>
+            <p class="card-text ">Price:<del>$209.56</del>
               <b style="color: red;">4.55% OFF</b><br>
-            <h3>$105</h3>
+            <h3>$200</h3>
             </p>
-            <a href="https://www.alibaba.com/product-detail/Best-selling-JJPRO-GREENFLY-R290-smart_1600700636011.html?spm=a2700.galleryofferlist.0.0.7f1c46a6VLwCFF%5C" target="_blank" class="btn btn-primary">View Details</a>
+            <a href="https://www.alibaba.com/product-detail/12000-24000-BTU-R410A-Refrigerant-50Hz_1600344594279.html?spm=a2700.galleryofferlist.topad_classic.i4.47ededcbzG5bVM" target="_blank" class="btn btn-primary">View Details</a>
           </div>
         </div>
       </div>
@@ -96,42 +96,41 @@
 
   </main>
 
- <!-- Footer -->
- <footer class="container-fluid bg-light mt-5">
-  <div class="row ms-5 ">
-    <div class="col-lg-6 col-md-6 col-sm-12 ">
-      <img src="img/logo1.png" alt="" width="30%" class="enlargeable-image img-fluid mt-0 pt-0 ms-5 ps-5 pl" >
-      <p>We are dedicated to providing you with the latest updates, news, and resources about Valorant. Our goal is to create a vibrant community of Valorant players where you can connect, learn, and enhance your gaming experience.</p>
+   <!-- Footer -->
+   <footer class="container-fluid bg-light mt-5">
+    <div class="row ms-5 ">
+      <div class="col-lg-6 col-md-6 col-sm-12 ">
+        <img src="img/logo1.png" alt="" width="30%" class="enlargeable-image img-fluid mt-0 pt-0 ms-5 ps-5 pl" >
+        <p>We are dedicated to providing you with the latest updates, news, and resources about Valorant. Our goal is to create a vibrant community of Valorant players where you can connect, learn, and enhance your gaming experience.</p>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-6">
+        <h3>Quick Links</h3>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">About Us</a></li>
+          <li><a href="video.html">Videos</a></li>
+          <li><a href="schedule.html">Schedule</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="schedule.html">FAQS</a></li>
+          <li><a href="video.html">Reviews</a></li>
+        </ul>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-6">
+        <h3>Follow Us</h3>
+        <ul class="social-media-icons">
+          <li><a target="_blank" href="https://www.facebook.com/abdullahwebmaster/"><i class="fab fa-facebook-f pe-1"></i>FaceBook </a></li>
+          <li><a target="_blank" href="https://www.instagram.com/abdullahwebmaster/"><i class="fab fa-instagram pe-1"></i>Instagram</a></li>
+          <li><a target="_blank" href="https://www.youtube.com/@sohail6391"><i class="fab fa-youtube pe-1"></i>YouTube</a></li>
+        </ul>
+      </div>
     </div>
-    <div class="col-lg-3 col-md-3 col-sm-6">
-      <h3>Quick Links</h3>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="index.html">About Us</a></li>
-        <li><a href="video.html">Videos</a></li>
-        <li><a href="schedule.html">Schedule</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="schedule.html">FAQS</a></li>
-        <li><a href="video.html">Reviews</a></li>
-      </ul>
+  
+  
+  
+    <div class="ms-5">
+      © Copyright 2023 <a target="_blank" href="https://www.instagram.com/abdullahwebmaster/">@abdullahwebmaster.</a> All Rights Reserved.
     </div>
-    <div class="col-lg-3 col-md-3 col-sm-6">
-      <h3>Follow Us</h3>
-      <ul class="social-media-icons">
-        <li><a href="#"><i class="fab fa-facebook-f pe-1"></i>FaceBook </a></li>
-        <li><a href="#"><i class="fab fa-twitter pe-1"></i>Twitter</a></li>
-        <li><a href="#"><i class="fab fa-instagram pe-1"></i>Instagram</a></li>
-        <li><a href="#"><i class="fab fa-youtube pe-1"></i>YouTube</a></li>
-      </ul>
-    </div>
-  </div>
-
-
-
-  <div class="ms-5">
-    © Copyright 2023 <a href="https://www.instagram.com/abdullahjani100/">@abdullahjani100.</a> All Rights Reserved.
-  </div>
-</footer>
+  </footer>
 
   <script>
     var loader = document.getElementById("preloader");
