--- a/schedule.html
+++ b/schedule.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GD ALI Schedule</title>
+  <title>Mask Wala Guy Schedule</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css"
     integrity="sha512-SbiR/eusphKoMVVXysTKG/7VseWii+Y3FdHrt0EpKgpToZeemhqHeZeLWLhJutz/2ut2Vw1uQEj2MbRF+TVBUA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -121,24 +121,24 @@ margin-left: 30%;
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingTwo">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Question 2: How can I contact GD Ali for collaborations?
+          Question 2: How can I contact Mask Wala Guy for collaborations?
         </button>
       </h2>
       <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
         <div class="accordion-body">
-          Answer: For collaboration inquiries with GD Ali, please reach out to him through his official email address or social media channels. We appreciate your interest and will get back to you as soon as possible.
+          Answer: For collaboration inquiries with Mask Wala Guy, please reach out to him through his official email address or social media channels. We appreciate your interest and will get back to you as soon as possible.
         </div>
       </div>
     </div>
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingThree">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          Question 3: Can I request specific topics for GD Ali's videos?
+          Question 3: Can I request specific topics for Mask Wala Guy's videos?
         </button>
       </h2>
       <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
         <div class="accordion-body">
-          Answer: While GD Ali may not be able to fulfill every individual request, he appreciates suggestions and feedback from his audience. Feel free to leave comments on his videos or reach out to him through social media platforms to share your ideas.
+          Answer: While Mask Wala Guy may not be able to fulfill every individual request, he appreciates suggestions and feedback from his audience. Feel free to leave comments on his videos or reach out to him through social media platforms to share your ideas.
         </div>
       </div>
     </div>
@@ -148,42 +148,41 @@ margin-left: 30%;
 
   </main>
 
- <!-- Footer -->
- <footer class="container-fluid bg-light mt-5">
-  <div class="row ms-5 ">
-    <div class="col-lg-6 col-md-6 col-sm-12 ">
-      <img src="img/logo1.png" alt="" width="30%" class="enlargeable-image img-fluid mt-0 pt-0 ms-5 ps-5 pl" >
-      <p>We are dedicated to providing you with the latest updates, news, and resources about Valorant. Our goal is to create a vibrant community of Valorant players where you can connect, learn, and enhance your gaming experience.</p>
+   <!-- Footer -->
+   <footer class="container-fluid bg-light mt-5">
+    <div class="row ms-5 ">
+      <div class="col-lg-6 col-md-6 col-sm-12 ">
+        <img src="img/logo1.png" alt="" width="30%" class="enlargeable-image img-fluid mt-0 pt-0 ms-5 ps-5 pl" >
+        <p>We are dedicated to providing you with the latest updates, news, and resources about Valorant. Our goal is to create a vibrant community of Valorant players where you can connect, learn, and enhance your gaming experience.</p>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-6">
+        <h3>Quick Links</h3>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">About Us</a></li>
+          <li><a href="video.html">Videos</a></li>
+          <li><a href="schedule.html">Schedule</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="schedule.html">FAQS</a></li>
+          <li><a href="video.html">Reviews</a></li>
+        </ul>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-6">
+        <h3>Follow Us</h3>
+        <ul class="social-media-icons">
+          <li><a target="_blank" href="https://www.facebook.com/abdullahwebmaster/"><i class="fab fa-facebook-f pe-1"></i>FaceBook </a></li>
+          <li><a target="_blank" href="https://www.instagram.com/abdullahwebmaster/"><i class="fab fa-instagram pe-1"></i>Instagram</a></li>
+          <li><a target="_blank" href="https://www.youtube.com/@sohail6391"><i class="fab fa-youtube pe-1"></i>YouTube</a></li>
+        </ul>
+      </div>
     </div>
-    <div class="col-lg-3 col-md-3 col-sm-6">
-      <h3>Quick Links</h3>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="index.html">About Us</a></li>
-        <li><a href="video.html">Videos</a></li>
-        <li><a href="schedule.html">Schedule</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="schedule.html">FAQS</a></li>
-        <li><a href="video.html">Reviews</a></li>
-      </ul>
+  
+  
+  
+    <div class="ms-5">
+      © Copyright 2023 <a target="_blank" href="https://www.instagram.com/abdullahwebmaster/">@abdullahwebmaster.</a> All Rights Reserved.
     </div>
-    <div class="col-lg-3 col-md-3 col-sm-6">
-      <h3>Follow Us</h3>
-      <ul class="social-media-icons">
-        <li><a href="#"><i class="fab fa-facebook-f pe-1"></i>FaceBook </a></li>
-        <li><a href="#"><i class="fab fa-twitter pe-1"></i>Twitter</a></li>
-        <li><a href="#"><i class="fab fa-instagram pe-1"></i>Instagram</a></li>
-        <li><a href="#"><i class="fab fa-youtube pe-1"></i>YouTube</a></li>
-      </ul>
-    </div>
-  </div>
-
-
-
-  <div class="ms-5">
-    © Copyright 2023 <a href="https://www.instagram.com/abdullahjani100/">@abdullahjani100.</a> All Rights Reserved.
-  </div>
-</footer>
+  </footer>
 
   <script>
     var loader = document.getElementById("preloader");
@@ -193,7 +192,7 @@ margin-left: 30%;
   </script>
 
   <script>
-     var countDownDate=new Date("Jul 16,2023 00:00:00").getTime();
+     var countDownDate=new Date("sept 16,2024 00:00:00").getTime();
         var x=setInterval(function(){
           var now=new Date().getTime();
           var distance=countDownDate - now
