--- a/video.html
+++ b/video.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GD ALI Videos</title>
+  <title>Mask Wala Guy Videos</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css"
     integrity="sha512-SbiR/eusphKoMVVXysTKG/7VseWii+Y3FdHrt0EpKgpToZeemhqHeZeLWLhJutz/2ut2Vw1uQEj2MbRF+TVBUA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -79,17 +79,17 @@
       <h1 class="d-flex justify-content-center">Our Videos</h1>
       <div class="row ">
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/3KXt8tkc1Cg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/wV3GYTwD3XY?si=A08kf6v8n24LnEQ7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/pCoGoovGbFA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/7WAWfBCVx8s?si=9DCOXd34aAs2wEzB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </div>
 
 
 
 
-      <a href="https://www.youtube.com/@GD_ALI_" target="_blank" class="btn btn-danger" style="width: 10rem;">Visit
+      <a href="https://www.youtube.com/@sohail6391/videos" target="_blank" class="btn btn-danger" style="width: 10rem;">Visit
         Channel <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
     </section>
 
@@ -110,7 +110,7 @@
           <i class="fas fa-star"></i>
           <i class="far fa-star"></i>
         </h3>
-        <p>"I've been a fan of GD Ali's YouTube channel for a while now. His engaging personality, insightful commentary, and exceptional gameplay make every video a joy to watch. Keep up the fantastic work!"</p>
+        <p>"I've been a fan of Mask Wala Guy's YouTube channel for a while now. His engaging personality, insightful commentary, and exceptional gameplay make every video a joy to watch. Keep up the fantastic work!"</p>
       </div>
     </div>
     <div class="row">
@@ -126,7 +126,7 @@
           <i class="fas fa-star"></i>
           <i class="far fa-star"></i>
         </h3>
-        <p>"GD Ali's YouTube channel has been my go-to source for gaming content. His videos are entertaining and educational, providing valuable tips and strategies to improve my gameplay. Highly recommended!"</p>
+        <p>"Mask Wala Guy's YouTube channel has been my go-to source for gaming content. His videos are entertaining and educational, providing valuable tips and strategies to improve my gameplay. Highly recommended!"</p>
       </div>
     </div>
     <div class="row">
@@ -142,7 +142,7 @@
           <i class="fas fa-star"></i>
           <i class="far fa-star"></i>
         </h3>
-        <p>"GD Ali's YouTube channel has quickly become one of my favorites. His charismatic personality and excellent presentation style make his videos highly enjoyable. Always delivering top-notch content. Looking forward to every new upload!"</p>
+        <p>"Mask Wala Guy's YouTube channel has quickly become one of my favorites. His charismatic personality and excellent presentation style make his videos highly enjoyable. Always delivering top-notch content. Looking forward to every new upload!"</p>
       </div>
     </div>
 
@@ -155,42 +155,41 @@
 
   </main>
 
- <!-- Footer -->
- <footer class="container-fluid bg-light mt-5">
-  <div class="row ms-5 ">
-    <div class="col-lg-6 col-md-6 col-sm-12 ">
-      <img src="img/logo1.png" alt="" width="30%" class="enlargeable-image img-fluid mt-0 pt-0 ms-5 ps-5 pl" >
-      <p>We are dedicated to providing you with the latest updates, news, and resources about Valorant. Our goal is to create a vibrant community of Valorant players where you can connect, learn, and enhance your gaming experience.</p>
+   <!-- Footer -->
+   <footer class="container-fluid bg-light mt-5">
+    <div class="row ms-5 ">
+      <div class="col-lg-6 col-md-6 col-sm-12 ">
+        <img src="img/logo1.png" alt="" width="30%" class="enlargeable-image img-fluid mt-0 pt-0 ms-5 ps-5 pl" >
+        <p>We are dedicated to providing you with the latest updates, news, and resources about Valorant. Our goal is to create a vibrant community of Valorant players where you can connect, learn, and enhance your gaming experience.</p>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-6">
+        <h3>Quick Links</h3>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">About Us</a></li>
+          <li><a href="video.html">Videos</a></li>
+          <li><a href="schedule.html">Schedule</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="schedule.html">FAQS</a></li>
+          <li><a href="video.html">Reviews</a></li>
+        </ul>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-6">
+        <h3>Follow Us</h3>
+        <ul class="social-media-icons">
+          <li><a target="_blank" href="https://www.facebook.com/abdullahwebmaster/"><i class="fab fa-facebook-f pe-1"></i>FaceBook </a></li>
+          <li><a target="_blank" href="https://www.instagram.com/abdullahwebmaster/"><i class="fab fa-instagram pe-1"></i>Instagram</a></li>
+          <li><a target="_blank" href="https://www.youtube.com/@sohail6391"><i class="fab fa-youtube pe-1"></i>YouTube</a></li>
+        </ul>
+      </div>
     </div>
-    <div class="col-lg-3 col-md-3 col-sm-6">
-      <h3>Quick Links</h3>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="index.html">About Us</a></li>
-        <li><a href="video.html">Videos</a></li>
-        <li><a href="schedule.html">Schedule</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="schedule.html">FAQS</a></li>
-        <li><a href="video.html">Reviews</a></li>
-      </ul>
+  
+  
+  
+    <div class="ms-5">
+      © Copyright 2023 <a target="_blank" href="https://www.instagram.com/abdullahwebmaster/">@abdullahwebmaster.</a> All Rights Reserved.
     </div>
-    <div class="col-lg-3 col-md-3 col-sm-6">
-      <h3>Follow Us</h3>
-      <ul class="social-media-icons">
-        <li><a href="#"><i class="fab fa-facebook-f pe-1"></i>FaceBook </a></li>
-        <li><a href="#"><i class="fab fa-twitter pe-1"></i>Twitter</a></li>
-        <li><a href="#"><i class="fab fa-instagram pe-1"></i>Instagram</a></li>
-        <li><a href="#"><i class="fab fa-youtube pe-1"></i>YouTube</a></li>
-      </ul>
-    </div>
-  </div>
-
-
-
-  <div class="ms-5">
-    © Copyright 2023 <a href="https://www.instagram.com/abdullahjani100/">@abdullahjani100.</a> All Rights Reserved.
-  </div>
-</footer>
+  </footer>
 
   <script>
     var loader = document.getElementById("preloader");
